# realman_mpc

./: .gitmodules
gazebo_mpc_interface/: package.xml  setup.cfg  setup.py
gazebo_mpc_interface/gazebo_mpc_interface/: gazebo_mpc_interface.py
ocs2_robotic_assets/resources/mobile_manipulator/realhex/meshes/base/: base_link.STL  blc_Link.STL  brc_Link.STL  flc_Link.STL  frc_Link.STL  frontback_Link.STL  logo_link.STL  lw_Link.STL  parts_Link.STL  plus_Link.STL  print_Link.STL  rw_link.STL  up_link.STL
ocs2_robotic_assets/resources/mobile_manipulator/realhex/urdf/: realhex.urdf
ocs2_robotic_assets/resources/mobile_manipulator/realman/meshes/: camera_connect.STL  gripper_Link1.STL  gripper_Link2.STL  gripper_Link3.STL  gripper_Link4.STL  gripper_base_link.STL
ocs2_robotic_assets/resources/mobile_manipulator/realman/urdf/: rm_75.urdf  rm_75_6f.urdf  rm_75_6f_description.urdf  rm_75_6f_description_1.urdf
ocs2_ros2/nvblox_msgs/: CMakeLists.txt
ocs2_ros2/nvblox_msgs/srv/: VoxelEsdfAndGradients.srv
ocs2_ros2/ocs2_core/: CMakeLists.txt
ocs2_ros2/ocs2_core/cmake/: ocs2_cxx_flags.cmake
ocs2_ros2/ocs2_core/src/penalties/: MultidimensionalPenalty.cpp
ocs2_ros2/ocs2_msgs/: CMakeLists.txt  package.xml
ocs2_ros2/ocs2_msgs/srv/: GenerateTraj.srv
ocs2_ros2/ocs2_pinocchio/ocs2_sphere_approximation/: CMakeLists.txt
ocs2_ros2/ocs2_pinocchio/ocs2_sphere_approximation/include/ocs2_sphere_approximation/: PinocchioSphereInterface.h
ocs2_ros2/ocs2_pinocchio/ocs2_sphere_approximation/src/: PinocchioSphereInterface.cpp
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/: CMakeLists.txt  package.xml
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/config/franka/: task.info
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/config/realhex/: task.info
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/config/realman/: base.info  collision_avoid.info  high_ee.info  high_input.info  joint_limits.info  joint_velocity.info  real_base.info  self_collision.info  task.info  task1 .info
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/include/ocs2_mobile_manipulator/: EsdfClientInterface.h  MobileManipulatorInterface.h
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/include/ocs2_mobile_manipulator/constraint/: BaseOrientationConstraint.h  EmptyConstraint.h  ObstacleAvoidanceConstraint.h
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/src/: EsdfClientInterface.cpp  MobileManipulatorInterface.cpp
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/src/constraint/: BaseOrientationConstraint.cpp  EmptyConstraint.cpp  EndEffectorConstraint.cpp  ObstacleAvoidanceConstraint.cpp
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator/test/: test_esdf_client.cpp
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator_ros/: CMakeLists.txt
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator_ros/launch/: manipulator_realhex.launch.py  manipulator_realman.launch.py  manipulator_realman_mpc.launch.py
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator_ros/launch/include/: mobile_manipulator.launch.py  visualize.launch.py
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator_ros/rviz/: mobile_manipulator.rviz  realman_esdf.rviz
ocs2_ros2/ocs2_robotic_examples/ocs2_mobile_manipulator_ros/src/: MobileManipulatorDummyMRT.cpp  MobileManipulatorMpcNode.cpp
ocs2_ros2/ocs2_ros_interfaces/include/ocs2_ros_interfaces/mpc/: MPC_ROS_Interface.h
ocs2_ros2/ocs2_ros_interfaces/include/ocs2_ros_interfaces/mrt/: MRT_ROS_Interface.h
ocs2_ros2/ocs2_ros_interfaces/src/command/: TargetTrajectoriesInteractiveMarker.cpp  TargetTrajectoriesKeyboardPublisher.cpp
ocs2_ros2/ocs2_ros_interfaces/src/mpc/: MPC_ROS_Interface.cpp
ocs2_ros2/ocs2_ros_interfaces/src/mrt/: MRT_ROS_Interface.cpp
ocs2_ros2/ocs2_ros_interfaces/src/multiplot/: MultiplotRemap.cpp
ocs2_ros2/ocs2_ros_interfaces/src/synchronized_module/: RosReferenceManager.cpp
ocs2_ros2/ocs2_ros_interfaces/test/: test_custom_callback_queue.cpp
ocs2_ros2/ocs2_sqp/hpipm_catkin/: CMakeLists.txt
realman_mpc_interface/: package.xml  setup.cfg  setup.py
realman_mpc_interface/realman_mpc_interface/: gazebo_mpc_interface.py  real_mpc_interface.py  utils.py
test_pkg/: package.xml  setup.py
test_pkg/test_pkg/: turtle_tester.py
